
= rufus-tokyo CHANGELOG.txt


== rufus-tokyo - 1.0.1    not yet released

- todo      : added #putdup and #get4 to Cabinet (Edo and Tokyo)
- todo      : better dylib 'detection' (Pietro Ferrari)
- todo      : aliased lget to mget (thanks Runa)
- todo      : proper Abort exception (Kenneth Kalmer)


== rufus-tokyo - 1.0.0    released 2009/07/23

- todo      : merged in Jeremy Hinegardner's Dystopia work
- issue #13 : to_s for keys and values (thanks Elise and Ilya)
- todo      : added full-text search ops :ftsphrase, :ftsex, :ftsor and :ftsand
- todo      : added inverted index types, :token, :qgram, :opt
- todo      : dropped 'backward compability' TC[/TT] 1.4.28+ ftw


== rufus-tokyo - 0.1.14    released 2009/06/30

- issue #2 : query#add with no_index=false by default
- issue #1 : added query#delete and table#query_delete


== rufus-tokyo - 0.1.13    released 2009/06/02

- todo  : putkeep implementation (by Kamal)
- todo  : support for binary data (map, list, cabinet, table, tokyo/edo)
- todo  : added #defrag to Rufus::Tokyo::Cabinet
- todo  : added :dfunit to databases that support it
- todo  : added #addint and #adddouble (#incr)


== rufus-tokyo - 0.1.12    released 2009/04/07

- todo  : added ext method for calling embedded Lua function (Tyrant)
- todo  : added transaction support for Rufus::Tokyo::Cabinet
- todo  : mimicking query.count in rufus/edo
- todo  : implemented query.count (TC 1.4.12 and TT 1.1.20 only) rufus/tokyo


== rufus-tokyo - 0.1.11    released 2009/03/25

- todo  : autodetecting /usr/lib/libtokyocabinet.so and
          /usr/lib/libtokyotyrant.so (thanks mebaran)


== rufus-tokyo - 0.1.10    released 2009/03/19

- bug   : had to adapt to TC 1.4.10 and TT 1.1.17 new "setlimit"


== rufus-tokyo - 0.1.9    released 2009/02/27

- bug   : sudo gem install rufus-tokyo was failing because of
          lib/tokyotyrant.rb. Fixed.


== rufus-tokyo - 0.1.8    released 2009/02/27
