@@ -4,6 +4,7 @@
 
 == rufus-tokyo - 1.0.1    not yet released
 
+- todo      : implemented search/union/intersection/difference for tables
 - todo      : added #putdup and #get4 to Cabinet (Edo and Tokyo)
 - todo      : better dylib 'detection' (Pietro Ferrari)
 - todo      : aliased lget to mget (thanks Runa)
